delay in info editor #58439

Closed
opened 2018-12-01 16:05:53 +01:00 by Julien Duroure · 10 comments
Member

System Information
Operating system: Mint 19
Graphics card: GTX860M

Blender Version
Broken: beta build of december 1rst

Short description of error
Delay displaying info in info editor

Exact steps for others to reproduce the error

  • Switch to scripting workspace to display both 3D view & info editor
  • Deselect all your objects
  • X to delete objects
  • Until your click on info editor, the line "Deleted 0 object(s)" is not displayed
  • This works whatever the number of deleted objects is != 0
**System Information** Operating system: Mint 19 Graphics card: GTX860M **Blender Version** Broken: beta build of december 1rst **Short description of error** Delay displaying info in info editor **Exact steps for others to reproduce the error** * Switch to scripting workspace to display both 3D view & info editor * Deselect all your objects * X to delete objects * Until your click on info editor, the line "Deleted 0 object(s)" is not displayed * This works whatever the number of deleted objects is != 0
Author
Member

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Thanks for the report, that should be fixed.

Thanks for the report, that should be fixed.
Member

Added subscriber: @nacioss

Added subscriber: @nacioss
Member

The issue is still happening in 2.8 build of 2019-05-13

The issue is still happening in 2.8 build of 2019-05-13
Member

Added subscriber: @Poulpator

Added subscriber: @Poulpator

This issue was referenced by 6eb1004d50

This issue was referenced by 6eb1004d50b8b80c67fd867efae8c3a66f5f0cec
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2020-03-26 10:33:01 +01:00
Member

Not really sure this is a bug.
We have lots of operators the return OPERATOR_CANCELLED when nothing really changed (look for blocks like the following)

  if (!changed) {
    return OPERATOR_CANCELLED;
  }

If the operator was cancelled then the BKE_report apparently doesnt refresh info editor immediately (it does with OPERATOR_FINISHED).
D7238: Fix #58439: Info Editor does not show operator reports immediately when operator cancelled. fixes this, not 100% sure this is the best place for the notifier though...

Not really sure this is a bug. We have lots of operators the return `OPERATOR_CANCELLED` when nothing really changed (look for blocks like the following) ``` if (!changed) { return OPERATOR_CANCELLED; } ``` If the operator was cancelled then the `BKE_report` apparently doesnt refresh info editor immediately (it does with `OPERATOR_FINISHED`). [D7238: Fix #58439: Info Editor does not show operator reports immediately when operator cancelled.](https://archive.blender.org/developer/D7238) fixes this, not 100% sure this is the best place for the notifier though...
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58439
No description provided.